2013-08-01: Ver. 0.2-1
  * Fix i.lib problem in "R/zzz.r.in".
  * Remove --with-Rmpi-* from configure.ac.
  * Add MPICH for MPICH version 3 or later.

2013-07-24: Ver. 0.2-0
  * Move fpmpi to pbdPROF and link with it's static library.
  * Add mpiP and TAU.
  * Move pbdDEMO::timer() to pbdMPI::comm.timer().

2013-07-05: Ver. 0.1-9 (unreleased and merged to Ver. 0.2-0)
  * Change spmd.isend.default() to blocking send.

2013-07-03: Ver. 0.1-8
  * Move inst/doc/vignettes/ to vignettes/.
  * Add fpmpi license.

2013-07-02: Ver. 0.1-7
  * Fix man page.
  * Fix pbdApply.
  * Add messages to interactive mode.
  * Drop some barrier in comm.print and comm.cat.
  * Add FAQ to vignette.
  * Add fpmpi.
  * Add task pull parallelism.
  * Move vignettes.

2013-03-24: Ver. 0.1-6
  * License changed.
  * Add "block0" to get.jid and fix its bug.
  * Add FPMPI for profilling.

2013-03-11: Ver. 0.1-5
  * Add and fix comm.stop and comm.warning.
  * Add set.seed in .onLoad to give a default set.
  * Fix symbol.rds problem.

2013-01-17: Ver. 0.1-4
  * Add control to comm.print and comm.cat.
  * Fix .Last.lib problem.
  * Fix comm.all and comm.any na.rm bug.

2012-12-13: Ver. 0.1-3
  * Fix Mac OSX dynamic loading problem.
  * Fix .GlobalEnv problem.
  * Fix multi-arch problem.
  * Add copyright to vignette.

2012-10-30: Ver. 0.1-2
  * Add comm.all and comm.any, and rename g.sort to comm.sort.

2012-10-02: Ver. 0.1-1
  * Make changes for Nautilus. Drop "pbdMPI:::* ideas" for other pbd packages.
  * Make changes for pbdSLAP, pbdBASE, and pbdDMAT.
  * Add seed functions.
  * Add global sorting functions.
  * Modify configure.ac and Makevars.in for Solaris and pbdSLAP, pbdBASE, and       pbdDMAT.

======================= Log Before Release =====================================
2012-09-01:
  * Rename to 'pbdMPI'.
  * Add 'apply'-alike functions.
  * Adjust "Makevars.win".

2012-08-11:
  * Convert configure.ac back to Rmpi's version.