@@ -3,7 +3,7 @@
 /* ----- recv ----- */
 SEXP spmd_recv_integer(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 		SEXP R_comm, SEXP R_status){
-	spmd_errhandler(MPI_Recv(INTEGER(R_recv_data), LENGTH(R_recv_data),
+	spmd_errhandler(MPI_Recv(INTEGER(R_recv_data), XLENGTH(R_recv_data),
 		MPI_INT, INTEGER(R_rank_source)[0], INTEGER(R_tag)[0],
 		comm[INTEGER(R_comm)[0]], &status[INTEGER(R_status)[0]]));
 	return(R_recv_data);
@@ -11,7 +11,7 @@ SEXP spmd_recv_integer(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 
 SEXP spmd_recv_double(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 		SEXP R_comm, SEXP R_status){
-	spmd_errhandler(MPI_Recv(REAL(R_recv_data), LENGTH(R_recv_data),
+	spmd_errhandler(MPI_Recv(REAL(R_recv_data), XLENGTH(R_recv_data),
 		MPI_DOUBLE, INTEGER(R_rank_source)[0], INTEGER(R_tag)[0],
 		comm[INTEGER(R_comm)[0]], &status[INTEGER(R_status)[0]]));
 	return(R_recv_data);
@@ -19,7 +19,7 @@ SEXP spmd_recv_double(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 
 SEXP spmd_recv_raw(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 		SEXP R_comm, SEXP R_status){
-	spmd_errhandler(MPI_Recv(RAW(R_recv_data), LENGTH(R_recv_data),
+	spmd_errhandler(MPI_Recv(RAW(R_recv_data), XLENGTH(R_recv_data),
 		MPI_BYTE, INTEGER(R_rank_source)[0], INTEGER(R_tag)[0],
 		comm[INTEGER(R_comm)[0]], &status[INTEGER(R_status)[0]]));
 	return(R_recv_data);
@@ -30,7 +30,7 @@ SEXP spmd_recv_raw(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 SEXP spmd_irecv_integer(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 		SEXP R_comm, SEXP R_request){
 	spmd_errhandler(MPI_Irecv(INTEGER(R_recv_data),
-		LENGTH(R_recv_data), MPI_INT,
+		XLENGTH(R_recv_data), MPI_INT,
 		INTEGER(R_rank_source)[0], INTEGER(R_tag)[0],
 		comm[INTEGER(R_comm)[0]], &request[INTEGER(R_request)[0]]));
 	return(R_recv_data);
@@ -38,7 +38,7 @@ SEXP spmd_irecv_integer(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 
 SEXP spmd_irecv_double(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 		SEXP R_comm, SEXP R_request){
-	spmd_errhandler(MPI_Irecv(REAL(R_recv_data), LENGTH(R_recv_data),
+	spmd_errhandler(MPI_Irecv(REAL(R_recv_data), XLENGTH(R_recv_data),
 		MPI_DOUBLE, INTEGER(R_rank_source)[0], INTEGER(R_tag)[0],
 		comm[INTEGER(R_comm)[0]], &request[INTEGER(R_request)[0]]));
 	return(R_recv_data);
@@ -46,7 +46,7 @@ SEXP spmd_irecv_double(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 
 SEXP spmd_irecv_raw(SEXP R_recv_data, SEXP R_rank_source, SEXP R_tag,
 		SEXP R_comm, SEXP R_request){
-	spmd_errhandler(MPI_Irecv(RAW(R_recv_data), LENGTH(R_recv_data),
+	spmd_errhandler(MPI_Irecv(RAW(R_recv_data), XLENGTH(R_recv_data),
 		MPI_BYTE, INTEGER(R_rank_source)[0], INTEGER(R_tag)[0],
 		comm[INTEGER(R_comm)[0]], &request[INTEGER(R_request)[0]]));
 	return(R_recv_data);
